# Projects

adcinterface/: CMakeLists.txt  adcinterface.c
blinkled/: CMakeLists.txt  blinkled.c
electricmotor/: CMakeLists.txt  electricmotor.c
helloworld/: CMakeLists.txt  helloworld.c
keypad/: CMakeLists.txt  keypad.c
led_intensity/: CMakeLists.txt  led_intensity.c
servomotor/: CMakeLists.txt  servomotor.c
